<resources>
    <string name="app_name">NewsApp</string>
    <string name="redirect_sign_in">Already have an  account?</string>
    <string name="signup_sub_heading">Please sign up to continue</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back</string>
    <string name="sign_in_sub_heading">Please sign in to continue</string>
    <string name="username">Username</string>
    <string name="userPassword">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="redirect_signup"><u>Dont you have an account?</u></string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="latest_news">Latest News</string>
    <string name="see_all">See All</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
</resources>